--- a/src/containers/Nav/nav.scss
+++ b/src/containers/Nav/nav.scss
@@ -24,3 +24,7 @@ nav {
     transition: color 0.5s;
   }
 }
+
+@media width{
+
+}
